css/reset.css
*,
*::before,
*::after {
	box-sizing: border-box;
}
* {
	margin: 0;
	padding: 0;
}
html,
body {
	min-height: 100%;
	overflow-x: hidden;
}
html {
	font-size: 62.5%;
}
body {
	font-size: 1rem;
	scroll-behavior: smooth;
	overflow-x: hidden;
}
header,
menu,
nav,
article,
aside,
details,
figcaption,
figure,
footer,
hgroup,
section {
	display: block;
}
h1,
h2,
h3,
h4,
h5,
h6 {
	font-weight: normal;
	text-rendering: optimizeLegibility;
}
iframe,
fieldset,
legend,
img {
	border: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}
td,
th {
	padding: 0;
}
th {
	font-weight: normal;
	text-align: left;
}
menu,
ul {
	list-style: none;
}
ol {
	list-style-type: decimal;
	list-style-position: outside;
}
a {
	color: rgb(0, 0, 0);
	text-decoration: none;
}
a,
button,
input,
select,
textarea {
	outline: none;
}
::-webkit-file-upload-button {
	font: inherit;
	-webkit-appearance: button;
}
[type='search']::-webkit-search-cancel-button,
[type='search']::-webkit-search-decoration {
	-webkit-appearance: none;
}
[type='number']::-webkit-inner-spin-button,
[type='number']::-webkit-outer-spin-button {
	height: auto;
}
input[type='date'],
input[type='time'],
input[type='datetime-local'],
input[type='month'] {
	-webkit-appearance: listbox;
}
button::-moz-focus-inner,
[type='button']::-moz-focus-inner,
[type='reset']::-moz-focus-inner,
[type='submit']::-moz-focus-inner {
	padding: 0;
	border-style: none;
}
button,
html [type='button'],
[type='reset'],
[type='submit'] {
	-webkit-appearance: button;
}
a,
area,
button,
input,
label,
select,
summary,
textarea {
	-ms-touch-action: manipulation;
	touch-action: manipulation;
}
svg:not(:root) {
	overflow: hidden;
}

